--- a/my_blog/blog/templates/blog/post/list.html
+++ b/my_blog/blog/templates/blog/post/list.html
@@ -12,5 +12,5 @@
             Publicado: {{ post.publish }} by {{ post.author }}
         </p>
     {% endfor %}
-
+    {% include "pagination.html" with page=posts %}
 {% endblock %}
